# private-search

./: LICENSE  README.md  pyproject.toml
search/: client.py  embedding.py  index.py
search/example/: embedding.ipynb  example.ipynb  homomorphic_encryption.ipynb  math.ipynb  secure.ipynb  unsecure.ipynb
