[tool.poetry]
name = "search"
version = "0.1.0"
description = ""
authors = ["Francisco J. Piedrahita-Velez <fpiedrah@brown.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
sentence-transformers = "^2.2.2"
datasets = "^2.14.6"
numpy = "^1.26.1"
scikit-learn = "^1.3.2"
tenseal = { git = "git@github.com:OpenMined/TenSEAL.git", tag = "v0.3.14"}


[tool.poetry.group.lint.dependencies]
ruff = "^0.1.5"
black = "^23.11.0"


[tool.poetry.group.test.dependencies]
jupyterlab = "^4.0.8"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
